# bazel-clang-pass

./: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  plugin.cpp  plugin.h  service.cpp  service.h
bzl/: BUILD  cc_attrs.bzl  cc_helper.bzl  cc_shared_library.bzl  cc_with_plugin.bzl  dict.bzl  semantics.bzl
bzl/objc/: objc_common.bzl  semantics.bzl
