bazel_dep(
    name = "bazel_skylib",
    version = "1.5.0",
)
bazel_dep(
    name = "toolchains_llvm",
    version = "0.10.3",
)

# ## To directly use a commit from GitHub, replace commit with the commit you want.
# ## Otherwise, omit this block.
git_override(
    module_name = "toolchains_llvm",
    commit = "a29c67a7abd38c5383909374ed4559d1599c5280",
    remote = "https://github.com/grailbio/bazel-toolchain",
)



llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

## Configure and register the toolchain.
llvm.toolchain(
    llvm_version = "16.0.4",
)

use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")  # if you depend on specific tools in scripts

register_toolchains("@llvm_toolchain//:all")
